--- a/ActivityLifeCycleTest/app/src/main/AndroidManifest.xml
+++ b/ActivityLifeCycleTest/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.sdzking.activitytest" >
+    package="com.sdzking.activitylifecycletest">
 
     <application
         android:allowBackup="true"
@@ -8,22 +8,16 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.ActivityTest" >
+        android:theme="@style/Theme.ActivityLifeCycleTest">
         <activity
-            android:name=".ThirdActivity"
+            android:name=".DialogActivity"
+            android:theme="@style/Theme.AppCompat.Dialog"
             android:exported="true" />
         <activity
-            android:name=".SecondActivity"
-            android:exported="true"
-            android:launchMode="singleInstance" >
-            <intent-filter>
-                <action android:name="com.sdzhking.activitytest.SecondActivity" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-        </activity>
+            android:name=".NormalActivity"
+            android:exported="true" />
         <activity
-            android:name=".FirstActivity"
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
