增加水果详情界面 实现可折叠时的标题栏

--- a/MaterialTest/app/src/main/AndroidManifest.xml
+++ b/MaterialTest/app/src/main/AndroidManifest.xml
@@ -10,9 +10,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MaterialTest">
         <activity
+            android:name=".FruitActivity"
+            android:exported="true" />
+        <activity
             android:name=".MainActivity"
-            android:label="Fruits"
-            android:exported="true">
+            android:exported="true"
+            android:label="Fruits">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
