完善水果详情界面 扩展状态栏增加透明度

--- a/MaterialTest/app/src/main/AndroidManifest.xml
+++ b/MaterialTest/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:theme="@style/Theme.MaterialTest">
         <activity
             android:name=".FruitActivity"
-            android:exported="true" />
+            android:exported="true"
+            android:theme="@style/FruitActivityTheme"
+            />
         <activity
             android:name=".MainActivity"
             android:exported="true"
