--- a/JetpackTest/app/build.gradle
+++ b/JetpackTest/app/build.gradle
@@ -45,6 +45,9 @@ dependencies {
     implementation 'androidx.room:room-runtime:2.2.6'
     kapt 'androidx.room:room-compiler:2.2.6'
 
+    //work manager 后台处理
+    implementation 'androidx.work:work-runtime:2.2.0'
+
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
